Thu Dec  2 15:31:14 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): more fix. [ruby-core:33513]

Thu Dec  2 13:41:43 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): workaround for console reading troubles.
	  fixed [ruby-core:33511]

Tue Nov 30 12:23:52 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): read only 1 byte at once on console.
	  workaround of Windows bug. see [ruby-core:33460].
	  this is not the final solution.

Mon Nov 29 22:55:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/uri/common.rb (URI::WFKV_): get rid of backtrack explosion
	  by nested repeat operators.  [ruby-core:33464]

Mon Nov 29 18:31:31 2010  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/test_transcode.rb (test_unicode_public_review_issue_121):
	  - Removed commented-out options that are no longer under discussion.
	  - Added two more tests for forthcomming clarifications.

Mon Nov 29 05:54:22 2010  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (native_cond_*): Check return code.
	  (Some OSs except Linux return error code).

Sat Nov 27 19:12:10 2010  Tanaka Akira  <akr@fsij.org>

	* time.c: parenthesize macro arguments.

Sat Nov 27 18:08:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (leap_year_v_p): fixed typo.  [ruby-dev:42631]

Fri Nov 26 09:48:45 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* re.c (rb_reg_initialize_str): should succeed the taint status from
	  the origin. [ruby-core:33338]

Tue Nov 23 18:54:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_mark): should mark self in conrol
	  frames.  [ruby-core:33289]

Sat Oct 30 00:35:13 2010  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_s_compile): fix optional argument.
	  a patch from Yutaka HARA [ruby-core:32953] [Ruby 1.9-Bug#4001]

Mon Nov 22 21:30:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_inspect): fix for ascii-compatible external